# fintech

./: .gitignore  conftest.py  docker-compose.yml  manage.py  pyproject.toml  task
FinTech/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
transaction/: models.py  serializers.py  urls.py  views.py
transaction/migrations/: 0001_initial.py  0002_alter_transaction_amount.py  0003_alter_transaction_txid.py
transaction/tests/views/: conftest.py  test_transaction.py
wallet/: models.py  serializers.py  urls.py  views.py
wallet/migrations/: 0001_initial.py  0002_alter_wallet_balance.py
wallet/tests/: conftest.py  factories.py
wallet/tests/views/: conftest.py  test_wallet.py
