[tool.poetry]
name = "fintech"
version = "0.1.0"
description = ""
authors = ["Dmitry <dmitry.emelianenko@lyte.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
djangorestframework = "^3.15.2"
djangorestframework-jsonapi = "^7.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
